# carhired

./: .tool-versions  Dockerfile  Insomnia_2023-09-23.json  build.gradle.kts  docker-compose.yml  nginx.conf  settings.gradle.kts
.jpb/: jpb-settings.xml
src/main/java/org/ifsul/carhired/: CarHiredApplication.java
src/main/java/org/ifsul/carhired/api/auth/: AuthController.java  AuthService.java
src/main/java/org/ifsul/carhired/api/automaker/: Automaker.java  AutomakerController.java  AutomakerRepository.java  AutomakerService.java
src/main/java/org/ifsul/carhired/api/aws/: AwsConfig.java  S3Service.java
src/main/java/org/ifsul/carhired/api/base/: BaseController.java  BaseModelEntity.java  BaseRepository.java
src/main/java/org/ifsul/carhired/api/model/: Model.java  ModelController.java  ModelRepository.java  ModelService.java
src/main/java/org/ifsul/carhired/api/rental/: Rental.java  RentalController.java  RentalMapper.java  RentalRepository.java  RentalService.java  RentalStatus.java
src/main/java/org/ifsul/carhired/api/test/: TestController.java  TestEntity.java  TestEntityRepository.java
src/main/java/org/ifsul/carhired/api/user/: Permission.java  Role.java  User.java  UserRepository.java  UserService.java
src/main/java/org/ifsul/carhired/api/vehicle/: Vehicle.java  VehicleController.java  VehicleRepository.java  VehicleService.java
src/main/resources/: application.yml
src/main/resources/db/migration/: V1__init.sql  V2__add_users.sql  V3__add_data.sql  V4__test_entity.sql
stress-test/: pyproject.toml  test.py
(+41 files in other folders)
