[tool.poetry]
name = "stress-test"
version = "0.1.0"
description = ""
authors = ["wpcasarin <72427968+wpcasarin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
